	- Fixed: External command died with signal 9 (without core dump)
	- Fixed: Keep current unix user uid/gid when updating the SYSTEM_USER_PREFIX and SYSTEM_USER_MIN_UID parameters
	- Fixed: Pass-in domain data to the listeners which listen to the *HttpdBuildConfFile and *HttpdBuildConf events
	- Fixed: Proftpd server is down after update
	- Fixed: Removed useless file tests on directory deletion
	- Updated: Plugin API to version 0.2.2

GUI:
	- Added: Allow to override plugin configuration with local file (See data/persistent/plugins/README file)
	- Added: quoteValue() function, which allow to quote string for use in SQL statements
	- Updated: Plugin API to version 0.2.2

SETUP:
	- Fixed: Composer process timeout must be increased for slow connections

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.7
------------------------------------------------------------------------------------------------------------------------

2013-11-21: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc4.7

CONFIG:
	- Added: Vagrantfile allowing to setup a virtual machine using Vagrant
	- Removed: DATABASE_UTF8 parameter

DOCS:
	- Fixed: Updated preseed template file

ENGINE:
	- Fixed: imscp-del-tmp script is broken (Undefined subroutine floor...)
	- Fixed: Plugin (backend part) must be re-installed if missing
	- Fixed: Plugin (backend part) must be removed on compile time error
	- Fixed: Plugin (backend part) must be removed when a plugin is being deactivated
	- Fixed: Quota script is broken (A critical error has been encountered while executing function main::quotaSql...)
	- Removed: iMSCP::Database::mysql::Result

GUI:
	- Added: onBeforeSendCircular and onAfterSendCircular events
	- Added: Spam Filter option which allow to keep postfix configuration (external mail server interface)
	- Changed: EventsManager - listener stack become a priority queue (Performance issues)