@@ -2,7 +2,7 @@
 
 This directory contains Vagrantfiles that can be used to setup and quickly test i-MSCP using [vagrant](http://www.vagrantup.com/).
 
-To get started, it is best to link the Vagrantfile to your the base directory of your development enviroment.
+To get started, it is best to link the Vagrantfile to the base directory of your development environment.
 
 	cd ../..
 	ln -s docs/vagrant/Vagrantfile Vagrantfile
@@ -13,4 +13,4 @@ Then to start the VM and immediately start the i-MSCP install and get a root ssh
 	vagrant ssh
 	sudo -s
 
-Thanks, happy vagranting! This process may change over time, so check back if things stop working for some reason
+Thanks, happy vagranting! This process may change over time, so check back if things stop working for some reason.
